# nexus-scraper

./: .gitignore  Cargo.toml  NOTES.md  PROJECTS.md  README.md  TASKS.md  TODO.md
nexus-cli/: Cargo.toml
nexus-cli/src/: main.rs
nexus-cli/tests/: cli_test.rs
nexus-core/: Cargo.toml
nexus-core/src/: error.rs  lib.rs  models.rs  network.rs  parser.rs  resolver.rs
nexus-core/src/parser/: archive.rs  fanfiction.rs  mod.rs  royalroad.rs  spacebattles.rs  webnovel.rs
nexus-core/src/sites/: archive.rs  fanfiction.rs  mod.rs  royalroad.rs  spacebattles.rs  webnovel.rs
nexus-core/tests/: test_archive.rs  test_fanfiction.rs  test_royalroad.rs  test_spacebattles.rs  test_webnovel.rs
nexus-core/tests/fixtures/webnovel/: catalog.html  chapter.html  chapter_list_api.json  story.html
nexus-tui/: Cargo.toml
nexus-tui/src/: main.rs
pybindings/: Cargo.toml
pybindings/src/: lib.rs
src/: main.rs
