[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

