[package]
name = "pybindings"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
nexus-core = { path = "../nexus-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
